--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "symfony/http-kernel": "^4.3",
         "symfony/routing": "^4.3",
-        "symfony/http-foundation": "^4.3"
+        "symfony/http-foundation": "^4.3",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
