--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,12 @@
         "symfony/http-kernel": "^4.3",
         "symfony/routing": "^4.3",
         "symfony/http-foundation": "^4.3",
-        "ext-json": "*"
+        "symfony/dependency-injection": "^4.3",
+        "doctrine/orm": "^2.6.3",
+        "symfony/yaml": "^3.2",
+        "symfony/dotenv": "^4.3",
+        "ext-json": "*",
+        "symfony/console": "^4.3"
     },
     "autoload": {
         "psr-4": {
